@startuml
'https://plantuml.com/class-diagram
left to right direction

class User {
    + id
    + email
    + password
    + role
    + contact
    + address
    + profilePhoto
}
class Role {
    + id
    + nameRole
}
class RoleUser {
    + id
    + idUser
    + idRole
}
class Photo {
    + id
    + photo
    + date
    + state
    + price
    + userId
    + name
    + idPortfolio
}
class Portfolio {
    + id
    + date
    + name
    + idUser
}
class Cart {
    + id
    + listPhotos
    + total
}
class Payments {
    + id
    + idCart
    + paymentMethod
    + state
    + date
}
class Receipt {
    + id
    + idPayment
    + description
}

User "1" --> "1" RoleUser : contains
RoleUser "1" --> "1" Role : Has

User "1" --> "0..*" Portfolio : Has
Portfolio "1" --> "1..*" Photo : Has
Photo "0..*"  --> "0..*" Cart : Is in
Cart "1" -> "1" Payments : Creates
Payments "1" --> "1" Receipt : Generates


@enduml